<resources>
    <string name="app_name">TeacherHelper</string>
    <string name="addElement_text_content">DODAJ</string>

    <string name="subjects_text_content">PRZEDMIOTY</string>
    <string name="editSubject_text_content">EDYTUJ PRZEDMIOT</string>
    <string name="addStudent_text_content">DODAJ STUDENTA</string>
    <string name="deleteStudent_text_content">USUŃ STUDENTA</string>

    <string name="students_text_content">STUDENCI</string>
    <string name="gradesList_text_content">LISTA OCEN</string>
    <string name="addGrade_text_content">DODAJ OCENĘ</string>
    <string name="checkMean_text_content">ŚREDNIA</string>
    <string name="studentGrades_text_content">OCENY STUDENTA</string>

    <string name="reset_text_content">RESETUJ DANE</string>

    <string name="firstName_textView_content">Imię</string>
    <string name="lastName_textView_content">Nazwisko</string>
    <string name="albumNumber_textView_content">Numer albumu</string>
    <string name="student_textView_content">Imię i nazwisko studenta</string>
    <string name="subjectId_textView_content">Id</string>
    <string name="subjectName_textView_content">Nazwa</string>
    <string name="subjectGroup_textView_content">Grupa</string>
    <string name="subjectWhen_textView_content">Kiedy</string>
    <string name="subject_textView_content">Nazwa i grupa przedmiotu</string>
    <string name="grade_textView_content">Ocena</string>
    <string name="studentGradesMean_textView_content">Srednia ocen</string>

    <string-array name="week_days">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>

    <string-array name="hours">
        <item>00</item><item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item><item>11</item>
        <item>12</item><item>13</item><item>14</item><item>15</item><item>16</item><item>17</item>
        <item>18</item><item>19</item><item>20</item><item>21</item><item>22</item><item>23</item>
    </string-array>

    <string-array name="minutes">
        <item>00</item><item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item><item>11</item>
        <item>12</item><item>13</item><item>14</item><item>15</item><item>16</item><item>17</item>
        <item>18</item><item>19</item><item>20</item><item>21</item><item>22</item><item>23</item>
        <item>24</item><item>25</item><item>26</item><item>27</item><item>28</item><item>29</item>
        <item>30</item><item>31</item><item>32</item><item>33</item><item>34</item><item>35</item>
        <item>36</item><item>37</item><item>38</item><item>39</item><item>40</item><item>41</item>
        <item>42</item><item>43</item><item>44</item><item>45</item><item>46</item><item>47</item>
        <item>48</item><item>49</item><item>50</item><item>51</item><item>52</item><item>53</item>
        <item>54</item><item>55</item><item>56</item><item>57</item><item>58</item><item>59</item>
    </string-array>

    <string-array name="grades">
        <item>2</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
    </string-array>
</resources>