<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/single_student"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/firstName_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/firstName_textView_content"/>

    <TextView
        android:id="@+id/lastName_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lastName_textView_content"/>

    <TextView
        android:id="@+id/albumNumber_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/albumNumber_textView_content"/>


</LinearLayout>