<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/students_top_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/students_text_content"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/students_list"
        android:layout_margin="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/students_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/students_top_caption"
        app:layout_constraintBottom_toTopOf="@id/student_first_name_editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/student_first_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/firstName_textView_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/students_list"
        app:layout_constraintBottom_toTopOf="@id/student_last_name_editText" />

    <EditText
        android:id="@+id/student_last_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/lastName_textView_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_first_name_editText"
        app:layout_constraintBottom_toTopOf="@id/student_album_number_editText" />

    <EditText
        android:id="@+id/student_album_number_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/albumNumber_textView_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_last_name_editText"
        app:layout_constraintBottom_toTopOf="@id/new_student_button" />

    <Button
        android:id="@+id/new_student_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addElement_text_content"
        app:layout_constraintBottom_toTopOf="@id/student_grades_button"
        app:layout_constraintLeft_toLeftOf="@id/student_grades_button"
        app:layout_constraintRight_toRightOf="@id/student_grades_button"
        app:layout_constraintTop_toBottomOf="@id/student_album_number_editText"
        />

    <Button
        android:id="@+id/student_grades_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentGrades_text_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_student_button"
        android:layout_marginBottom="5dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>