<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_subject_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/subjects_top_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/editSubject_text_content"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subject_name_caption"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/subject_name_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/subject_textView_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjects_top_caption"
        app:layout_constraintBottom_toTopOf="@id/all_students_list"
        android:layout_margin="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/all_students_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/subject_name_caption"
        app:layout_constraintBottom_toTopOf="@id/recycler_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="5dp"/>

    <View
        android:id="@+id/recycler_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/all_students_list"
        app:layout_constraintBottom_toTopOf="@id/participants_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/participants_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/recycler_divider"
        app:layout_constraintBottom_toTopOf="@id/add_student_to_subject_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/add_student_to_subject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addStudent_text_content"
        app:layout_constraintBottom_toTopOf="@id/delete_student_from_subject_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/participants_list"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/delete_student_from_subject_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/deleteStudent_text_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/add_student_to_subject_button"
        app:layout_constraintRight_toRightOf="@id/add_student_to_subject_button"
        app:layout_constraintTop_toBottomOf="@id/add_student_to_subject_button"
        android:layout_marginBottom="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>