<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/studentGrades_top_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/gradesList_text_content"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/student_name_caption"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/student_name_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/student_textView_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentGrades_top_caption"
        app:layout_constraintBottom_toTopOf="@id/studentGrades_list"
        android:layout_margin="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/studentGrades_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/student_name_caption"
        app:layout_constraintBottom_toTopOf="@id/recycler_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="5dp"/>

    <View
        android:id="@+id/recycler_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/studentGrades_list"
        app:layout_constraintBottom_toTopOf="@id/pick_subject_recycler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/pick_subject_recycler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_divider"
        app:layout_constraintBottom_toTopOf="@id/pick_grade_spinner"
        android:layout_margin="5dp" />

    <Spinner
        android:id="@+id/pick_grade_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/grades"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pick_subject_recycler"
        app:layout_constraintBottom_toTopOf="@id/add_grade_button"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/add_grade_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addGrade_text_content"
        app:layout_constraintBottom_toTopOf="@id/check_grades_mean_button"
        app:layout_constraintLeft_toLeftOf="@id/check_grades_mean_button"
        app:layout_constraintRight_toRightOf="@id/check_grades_mean_button"
        app:layout_constraintTop_toBottomOf="@id/pick_grade_spinner"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/check_grades_mean_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkMean_text_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_grade_button"
        android:layout_marginBottom="5dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>