<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Space
        android:id="@+id/top_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttons_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottom_space"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_space">

        <Button
            android:id="@+id/subjects_panel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subjects_text_content"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/reset_database_button"
            app:layout_constraintRight_toRightOf="@id/reset_database_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/students_panel_button"
            />

        <Button
            android:id="@+id/students_panel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/students_text_content"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/reset_database_button"
            app:layout_constraintRight_toRightOf="@id/reset_database_button"
            app:layout_constraintTop_toBottomOf="@id/subjects_panel_button"
            app:layout_constraintBottom_toTopOf="@id/reset_database_button"
            />

        <Button
            android:id="@+id/reset_database_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_text_content"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/students_panel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:id="@+id/bottom_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>