<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/subjects_top_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/subjects_text_content"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subjects_list"
        android:layout_margin="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/subjects_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/subjects_top_caption"
        app:layout_constraintBottom_toTopOf="@id/subject_name_editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/subject_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/subjectName_textView_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjects_list"
        app:layout_constraintBottom_toTopOf="@id/subject_group_editText"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/subject_group_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/subjectGroup_textView_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subject_name_editText"
        app:layout_constraintBottom_toTopOf="@id/week_days_spinner"
        android:layout_margin="5dp"
        />

    <Spinner
        android:id="@+id/week_days_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/week_days"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subject_group_editText"
        app:layout_constraintBottom_toTopOf="@id/time_picker_1_layout"
        android:layout_margin="5dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_picker_1_layout"
        app:layout_constraintTop_toBottomOf="@id/week_days_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/time_picker_2_layout"
        android:layout_margin="5dp">

        <Spinner
            android:id="@+id/hours_spinner_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/hours"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/minutes_spinner_1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="5dp"/>

        <Spinner
            android:id="@+id/minutes_spinner_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/minutes"
            app:layout_constraintLeft_toRightOf="@id/hours_spinner_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_picker_2_layout"
        app:layout_constraintTop_toBottomOf="@id/time_picker_1_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_subject_button"
        android:layout_margin="5dp">

        <Spinner
            android:id="@+id/hours_spinner_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/hours"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/minutes_spinner_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="5dp"/>

        <Spinner
            android:id="@+id/minutes_spinner_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/minutes"
            app:layout_constraintLeft_toRightOf="@id/hours_spinner_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/new_subject_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addElement_text_content"
        app:layout_constraintBottom_toTopOf="@id/edit_subject_button"
        app:layout_constraintLeft_toLeftOf="@id/edit_subject_button"
        app:layout_constraintRight_toRightOf="@id/edit_subject_button"
        app:layout_constraintTop_toBottomOf="@id/time_picker_2_layout"
        />

    <Button
        android:id="@+id/edit_subject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editSubject_text_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_subject_button"
        android:layout_marginBottom="5dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>